added property entity, service, controller and IT test